hphp/hack/test/typecheck/case_type/where_clauses/non_fixed_point_recursion_via_case_type_hint.php
<?hh

case type NonFixedPoint<T1> =
  | int where int as NonFixedPointOrBool<vec<T1>>;

case type NonFixedPointOrBool<T1> = NonFixedPoint<T1> | bool;
